update config nginx

--- a/nginx-config/services.conf
+++ b/nginx-config/services.conf
@@ -33,6 +33,7 @@ server {
     proxy_redirect off;
 
     location / {
+      add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
       proxy_pass http://faceweb_upstream/$1;
     }
 
