--- a/nginx-config/services.conf
+++ b/nginx-config/services.conf
@@ -32,6 +32,9 @@ server {
     proxy_set_header X-NginX-Proxy true;
     proxy_redirect off;
 
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept';
+
     location / {
       add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
       proxy_pass http://faceweb_upstream/$1;
