--- a/nginx-config/services.conf
+++ b/nginx-config/services.conf
@@ -40,6 +40,11 @@ server {
       proxy_pass http://faceweb_upstream/$1;
     }
 
+    location /admin {
+      rewrite ^/assets/(.*) /static/faceid/$1 break;
+      proxy_pass http://faceweb_upstream/admin/$1;
+    }
+
     location /static {
       rewrite ^/static/(.*) /static/$1 break;
       proxy_pass http://faceweb_upstream/static/$1;
